--- a/rAppla/AndroidManifest.xml
+++ b/rAppla/AndroidManifest.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.rappla"
+    package="app.rappla"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="11"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:allowTaskReparenting="false" android:logo="@drawable/rapla_icon" android:enabled="true">
+        android:theme="@style/AppTheme"
+        android:vmSafeMode="false" >
         <activity
-            android:name="com.example.rappla.RapplaActivity"
-            android:label="@string/app_name" >
+            android:name="app.rappla.RapplaActivity"
+            android:label="Rappla" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="app.rappla.SettingsActivity"
+            android:label="Settings" >
         </activity>
     </application>
 
