--- a/rAppla/AndroidManifest.xml
+++ b/rAppla/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="app.rappla"
     android:versionCode="1"
-    android:versionName="1.0" >
-
+    android:versionName="1.0">
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="19" />
@@ -13,7 +12,9 @@
         android:icon="@drawable/ic_rappla"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:vmSafeMode="false" >
+        android:vmSafeMode="false"  
+		android:name=".StaticContext">
+        
         <activity
             android:name="app.rappla.RapplaActivity"
             android:label="Rappla" >
