--- a/rAppla/AndroidManifest.xml
+++ b/rAppla/AndroidManifest.xml
@@ -18,6 +18,7 @@
         
         <activity
             android:name="app.rappla.RapplaActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="Rappla" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
