--- a/rAppla/AndroidManifest.xml
+++ b/rAppla/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0">
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="19" />
+        android:targetSdkVersion="18" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -28,6 +28,10 @@
         <activity
             android:name="app.rappla.activities.SettingsActivity"
             android:label="Settings" >
+        </activity>
+        <activity
+            android:name="app.rappla.activities.EventActivity"
+            android:label="Event" >
         </activity>
     </application>
 
