--- a/rAppla/.classpath
+++ b/rAppla/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="lib" path="libs/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="libs/commons-logging-1.1.3.jar"/>
 	<classpathentry kind="lib" path="libs/android-support-v13.jar" sourcepath="D:/adt-bundle-windows-x86_64-20130729/sdk/extras/android/support/v13/src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
