--- a/rAppla/AndroidManifest.xml
+++ b/rAppla/AndroidManifest.xml
@@ -31,6 +31,7 @@
         </activity>
         <activity
             android:name="app.rappla.activities.EventActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="Event" >
         </activity>
     </application>
