--- a/rAppla/AndroidManifest.xml
+++ b/rAppla/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="18" />
     <uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -34,6 +35,15 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="Event" >
         </activity>
+    	<activity 
+    	    android:name="app.rappla.activities.AlarmPopupDialog"
+    	    android:label="Alarm"
+    	    android:theme="@android:style/Theme.Dialog"
+    	    android:launchMode="singleInstance"
+    	    >
+    	    
+    	</activity>
     </application>
+    
 
 </manifest>
