Slight changes to make the unit tests work again

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ local.properties
 rappla/bin/
 rappla/gen/
 rappla/.settings/
+Testing/test_servers/0caea805e26565a19f50de8f9b374fce_0.4.21.apk
+*.apk
