--- a/rAppla/AndroidManifest.xml
+++ b/rAppla/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:vmSafeMode="false"  
-		android:name=".StaticContext">
+		android:name="app.rappla.StaticContext">
         
         <activity
             android:name="app.rappla.activities.RapplaActivity"
@@ -33,6 +33,8 @@
         <activity
             android:name="app.rappla.activities.EventActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"
+    	    android:launchMode="singleInstance"
             android:label="Event" >
         </activity>
     	<activity 
