Implemented first draft of RapplaUpdateService

--- a/rAppla/AndroidManifest.xml
+++ b/rAppla/AndroidManifest.xml
@@ -45,5 +45,7 @@
     	    >
     	    
     	</activity>
+        <receiver android:name=".RapplaBackgroundUpdateService" >
+        </receiver>
     </application>
 </manifest>
