--- a/rAppla/AndroidManifest.xml
+++ b/rAppla/AndroidManifest.xml
@@ -46,7 +46,23 @@
     	    >
     	    
     	</activity>
+        
         <receiver android:name=".RapplaBackgroundUpdateService" >
         </receiver>
+        
+        <receiver 
+            android:name="RapplaWidgetProvider" 
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"
+    		android:widgetCategory="home_screen">
+    
+    	<intent-filter>
+        	<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+    	</intent-filter>
+    	
+    	<meta-data 
+    	    android:name="android.appwidget.provider"
+            android:resource="@xml/rapplawidget_info" />
+</receiver>
     </application>
 </manifest>
